{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 190,
  "lineage": "a9935a88-df2b-d06a-3c67-8e3dbea56b38",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01f71e8066d6095b3",
            "association_id": "eipassoc-0323e879dcdf1576d",
            "domain": "vpc",
            "id": "eipalloc-01f71e8066d6095b3",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03d9ab98853e5fc74",
            "private_dns": "ip-30-0-1-106.ec2.internal",
            "private_ip": "30.0.1.106",
            "public_dns": "ec2-23-21-177-32.compute-1.amazonaws.com",
            "public_ip": "23.21.177.32",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263431666784:internet-gateway/igw-066b1b76d6626a1e9",
            "id": "igw-066b1b76d6626a1e9",
            "owner_id": "263431666784",
            "tags": {
              "Name": "main-igw-terraform"
            },
            "tags_all": {
              "Name": "main-igw-terraform"
            },
            "vpc_id": "vpc-0c9cbb09bee88aa24"
          },
          "dependencies": [
            "module.network.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01f71e8066d6095b3",
            "connectivity_type": "public",
            "id": "nat-0290ca7554acfbabb",
            "network_interface_id": "eni-03d9ab98853e5fc74",
            "private_ip": "30.0.1.106",
            "public_ip": "23.21.177.32",
            "subnet_id": "subnet-0d8c89db6fefd2dae",
            "tags": {
              "Name": "gw NAT-terraform"
            },
            "tags_all": {
              "Name": "gw NAT-terraform"
            }
          },
          "dependencies": [
            "module.network.aws_eip.lb",
            "module.network.aws_internet_gateway.igw-terraform",
            "module.network.aws_subnet.public-1-terraform",
            "module.network.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private_RT_Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263431666784:route-table/rtb-007dccb587686ed9d",
            "id": "rtb-007dccb587686ed9d",
            "owner_id": "263431666784",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0290ca7554acfbabb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private_RT_Terraform"
            },
            "tags_all": {
              "Name": "Private_RT_Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9cbb09bee88aa24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.lb",
            "module.network.aws_internet_gateway.igw-terraform",
            "module.network.aws_nat_gateway.nat-terraform",
            "module.network.aws_subnet.public-1-terraform",
            "module.network.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_RT_Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263431666784:route-table/rtb-05f62cb82f90e0687",
            "id": "rtb-05f62cb82f90e0687",
            "owner_id": "263431666784",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-066b1b76d6626a1e9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_RT_Terraform"
            },
            "tags_all": {
              "Name": "Public_RT_Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9cbb09bee88aa24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw-terraform",
            "module.network.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082649945e67b4543",
            "route_table_id": "rtb-05f62cb82f90e0687",
            "subnet_id": "subnet-0d8c89db6fefd2dae"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw-terraform",
            "module.network.aws_route_table.Public_RT_Terraform",
            "module.network.aws_subnet.public-1-terraform",
            "module.network.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7339887bfa5acf2",
            "route_table_id": "rtb-05f62cb82f90e0687",
            "subnet_id": "subnet-0cc1aaaf30955caa3"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw-terraform",
            "module.network.aws_route_table.Public_RT_Terraform",
            "module.network.aws_subnet.public-2-terraform",
            "module.network.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e25482228e8c3703",
            "route_table_id": "rtb-007dccb587686ed9d",
            "subnet_id": "subnet-03cb0f9982e7810f8"
          },
          "dependencies": [
            "module.network.aws_eip.lb",
            "module.network.aws_internet_gateway.igw-terraform",
            "module.network.aws_nat_gateway.nat-terraform",
            "module.network.aws_route_table.Private_RT_Terraform",
            "module.network.aws_subnet.private-1-terraform",
            "module.network.aws_subnet.public-1-terraform",
            "module.network.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0325112f6a41f9783",
            "route_table_id": "rtb-007dccb587686ed9d",
            "subnet_id": "subnet-0abc9f02b126fdbb2"
          },
          "dependencies": [
            "module.network.aws_eip.lb",
            "module.network.aws_internet_gateway.igw-terraform",
            "module.network.aws_nat_gateway.nat-terraform",
            "module.network.aws_route_table.Private_RT_Terraform",
            "module.network.aws_subnet.private-2-terraform",
            "module.network.aws_subnet.public-1-terraform",
            "module.network.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263431666784:subnet/subnet-03cb0f9982e7810f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "30.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03cb0f9982e7810f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263431666784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-1-terraform"
            },
            "tags_all": {
              "Name": "private-1-terraform"
            },
            "vpc_id": "vpc-0c9cbb09bee88aa24"
          },
          "dependencies": [
            "module.network.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263431666784:subnet/subnet-0abc9f02b126fdbb2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "30.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0abc9f02b126fdbb2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263431666784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-2-terraform"
            },
            "tags_all": {
              "Name": "private-2-terraform"
            },
            "vpc_id": "vpc-0c9cbb09bee88aa24"
          },
          "dependencies": [
            "module.network.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263431666784:subnet/subnet-0d8c89db6fefd2dae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "30.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8c89db6fefd2dae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263431666784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-1-terraform"
            },
            "tags_all": {
              "Name": "public-1-terraform"
            },
            "vpc_id": "vpc-0c9cbb09bee88aa24"
          },
          "dependencies": [
            "module.network.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-2-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263431666784:subnet/subnet-0cc1aaaf30955caa3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "30.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc1aaaf30955caa3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263431666784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-2-terraform"
            },
            "tags_all": {
              "Name": "public-2-terraform"
            },
            "vpc_id": "vpc-0c9cbb09bee88aa24"
          },
          "dependencies": [
            "module.network.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263431666784:vpc/vpc-0c9cbb09bee88aa24",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "30.0.0.0/16",
            "default_network_acl_id": "acl-063575ab689c8695e",
            "default_route_table_id": "rtb-0e08c5edbdb0b22be",
            "default_security_group_id": "sg-06ab42e3564a1edf4",
            "dhcp_options_id": "dopt-0f8644549e86e6b34",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c9cbb09bee88aa24",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e08c5edbdb0b22be",
            "owner_id": "263431666784",
            "tags": {
              "Name": "terraform_vpc"
            },
            "tags_all": {
              "Name": "terraform_vpc"
            }
          }
        }
      ]
    }
  ]
}